# moos-ivp-thoma904-thesis

./: .gitignore  CMakeLists.txt  README.md
missions/01-Minehunting/: clean.sh  init_field.sh  launch.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_iM300.moos
missions/02-Minehunting/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/02-obavoid/: meta_vehicle.bhv  meta_vehicle.moos
missions/02-obavoidfull/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/02-obavoidwtow/: meta_vehicle.bhv  meta_vehicle.moos
missions/03-obavoid_tow/: meta_vehicle.bhv  meta_vehicle.moos
missions/04-obavoidsim/: clean.sh  launch_batch.sh  launch_sleep.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/05-obavoidsimboth/: launch_batch.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/05-obavoidsimboth/aspects/: journal.mjo
missions/06-obavoidsimvehonly/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/06-obavoidsimvehonly/aspects/: obavoid.mov
missions/07-obavoidsimbothcable/: meta_vehicle.bhv  meta_vehicle.moos
missions/07-obavoidsimbothfixedobs/: meta_vehicle.bhv  meta_vehicle.moos
missions/08-obavoidsimbothfixedobs/: .gitignore  clean.sh  init_field.sh  launch_shoreside.sh  obstacles_fixed.txt  plugs.moos
missions/09-obavoidsimbothfixedobscable/: launch_sleep.sh
missions/10-obavoidsimbothfixedobscablerandstart/: launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/12-obavoidsimfinal/: launch_batch.sh  launch_sleep.sh  meta_vehicle.bhv
missions/13-obavoidsimfinal_ttctest/: launch_batch.sh
missions/14-obavoidsimfinal_bestconfig/: meta_vehicle.bhv
missions/15-obavoidsimfinal_bestconfig_fixed_start/: launch_batch.sh  meta_vehicle.bhv
missions/16-obavoidsimfinal_bestconfig_variedobstacles/: meta_vehicle.bhv
missions/17-obavoidsimfinal_bestconfig_variedobstacles_bottleneckaddress/: init_field.sh  meta_vehicle.bhv
missions/Archived_missions/01-Minehunting/: meta_vehicle.bhv  meta_vehicle.moos
missions/Archived_missions/02-obavoid/: meta_vehicle.bhv  meta_vehicle.moos
missions/Archived_missions/02-obavoidwtow/: meta_vehicle.bhv
missions/Archived_missions/03-obavoid_tow/: meta_shoreside.moos  obstacles_fixed.txt
missions/Simulations/04-obavoidsim/: init_field.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/Simulations/05-obavoidsimboth/: launch.sh
missions/Simulations/08-obavoidsimbothfixedobs/: launch_batch.sh
missions/Simulations/09-obavoidsimbothfixedobscable/: launch_batch.sh  launch_vehicle.sh  meta_vehicle.bhv
missions/Simulations/10-obavoidsimbothfixedobscablerandstart/: launch_batch.sh
missions/Simulations/11-obavoidsimbothfixedobscablerandstartnoopregion/: launch_batch.sh
missions/Simulations/12-obavoidsimfinal/: meta_vehicle.bhv
missions/Simulations/13-obavoidsimfinal_ttctest/: meta_vehicle.bhv
missions/Simulations/14-obavoidsimfinal_bestconfig/: launch_batch.sh
missions/Simulations/15-obavoidsimfinal_bestconfig_fixed_start/: launch_sleep.sh  meta_vehicle.moos
missions/Simulations/16-obavoidsimfinal_bestconfig_variedobstacles/: launch_batch.sh  meta_vehicle.bhv
missions/Simulations/17-obavoidsimfinal_bestconfig_variedobstacles_bottleneckaddress/: launch_sleep.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/Simulations/18-obavoidsim_increasedreflector/: meta_vehicle.bhv
missions/Simulations/19-best_fullwarp/: clean.sh  meta_vehicle.bhv
missions/Simulations/20-obavoidsimbothfixedobscablerandstartnoopregion_revalidation/: launch_batch.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/Simulations/21-obavoidsimfinal_bestconfig_variedobstacles_bottleneckaddress_simhorizon15/: .gitignore  launch_batch.sh  launch_sleep.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  zlaunch.sh
missions/Simulations/22-obavoidsimfinal_bestconfig_variedobstacles_bottleneckaddress_warp1/: launch_batch.sh
missions/Towing_1/: towing_1.bhv  towing_1.moos
missions/Towing_2/: README  launch.sh  towing_2.bhv  towing_2.moos
missions/alder/: alder.bhv  alder.moos
missions/alpha_blueboat/: .gitignore  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
missions/alpha_heron/: .gitignore  meta_vehicle.moos
src/: CMakeLists.txt
src/Archive/pTowTurnMgr/: TowTurnMgr.cpp  (+2 more)
src/Archive/pTowing_Area/: CMakeLists.txt  Towing_Area.cpp  main.cpp
src/Archive/pTowing_Circle/: CMakeLists.txt  Towing_Circle.h
src/app_aof_bench/: CMakeLists.txt  main.cpp  retry_crashed.sh  run_sweep.sh
src/app_bezview/: BEZ_GUI.cpp  BEZ_GUI.h  BEZ_Viewer.cpp  BEZ_Viewer.h  CMakeLists.txt  SimEngine.cpp  SimEngine.h  ThrustMap.cpp  main.cpp
src/lib_behaviors-test/: AOF_TowObstacleAvoid.cpp  AOF_TowObstacleAvoid.h  BHV_TowObstacleAvoid.cpp  BHV_TowObstacleAvoid.h  BHV_TowSafety.cpp  BHV_TowSafety.h  BHV_TowedTurn.cpp  BHV_TowedTurn.h  BHV_Towing.cpp  BHV_Towing.h  BHV_Williamson.cpp  BHV_Williamson.h  CMakeLists.txt
src/lib_towbody/: CMakeLists.txt  TowBodyModel.cpp  TowBodyModel.h  XYBezier.cpp  XYBezier.h
src/pCable/: CMakeLists.txt  Cable.cpp  Cable.h  Cable_Info.cpp  Cable_Info.h  main.cpp
src/pCableLengthTracker/: CMakeLists.txt  CableLengthTracker.cpp  CableLengthTracker.h  CableLengthTracker_Info.cpp  CableLengthTracker_Info.h  main.cpp
src/pTowObstacleMgr/: CMakeLists.txt  TowObstacleMgr.cpp  TowObstacleMgr.h  TowObstacleMgr_Info.cpp  TowObstacleMgr_Info.h  main.cpp
src/pTowTurnMgr/: CMakeLists.txt  TowTurnMgr.cpp  TowTurnMgr.h  TowTurnMgr_Info.cpp  main.cpp
src/pTowing/: CMakeLists.txt  Towing.cpp  Towing.h  Towing_Info.cpp  Towing_Info.h
src/pTowing1/: Towing.cpp  Towing.h
src/pTowing2/: CMakeLists.txt  Towing.cpp  Towing.h
src/pTowing_Area/: Towing_Area.cpp  Towing_Area.h  Towing_Area_Info.cpp  Towing_Area_Info.h
src/pTowing_Circle/: Towing_Circle.cpp  Towing_Circle_Info.cpp  Towing_Circle_Info.h  main.cpp
src/uFldTowObstacleSim/: CMakeLists.txt  TowObstacleSim.cpp  TowObstacleSim.h  TowObstacleSim_Info.cpp  TowObstacleSim_Info.h  main.cpp
(+19 files in other folders)
