#--------------------------------------------------------
# The CMakeLists.txt for:              lib_behaviors-test
# Author(s):                                
#--------------------------------------------------------

# Set System Specific Libraries
if (${WIN32})
  # Windows Libraries
  SET(SYSTEM_LIBS
      )
else (${WIN32})
  # Linux and Apple Libraries
  SET(SYSTEM_LIBS
      m )
endif (${WIN32})


MACRO(ADD_BHV BHV_NAME)
  ADD_LIBRARY(${BHV_NAME} SHARED ${BHV_NAME}.cpp)
  TARGET_LINK_LIBRARIES(${BHV_NAME} 
    helmivp
    behaviors 
    ivpbuild 
    logic 
    ivpcore 
    bhvutil 
    mbutil 
    geometry 
    ${SYSTEM_LIBS} )
ENDMACRO(ADD_BHV)


#--------------------------------------------------------
#                                      BHV_TowObstacleAvoid
#--------------------------------------------------------
ADD_LIBRARY(BHV_TowObstacleAvoid SHARED 
   BHV_TowObstacleAvoid.cpp AOF_TowObstacleAvoid.cpp)
TARGET_LINK_LIBRARIES(BHV_TowObstacleAvoid
   mbutil
   geometry
   bhvutil    
   behaviors
   helmivp 
   ivpbuild 
   logic 
   ivpcore
   mbutil
   geometry
   bhvutil    
   behaviors
   helmivp 
   ivpbuild 
   logic 
   ivpcore  
   ${SYSTEM_LIBS} )